# neynar_parquet_importer

./: .dockerignore  .env.test  .gitignore  Dockerfile  Dockerfile.test  LICENSE  Makefile  README.md  docker-compose.test.yml  docker-compose.yml  env.example  filters.example.json  pyproject.toml  requirements.txt  schema.sql  setup.py
.github/workflows/: release.yml
docs/: schemas.md
example_neynar_parquet_importer/: app.py  db.py  main.py  s3.py
neynar_parquet_importer/: db.py  main.py
schema/: 000_00_all_parquet_import_tracking.sql  000_01_all_parquet_import_tracking.sql  000_02_all_parquet_import_tracking.sql  000_03_all_parquet_import_tracking.sql  000_all_parquet_import_tracking.sql  001_00_public-postgres_farcaster_casts.sql  001_01_public-postgres_farcaster_casts.sql  001_public-postgres_farcaster_casts.sql  002_00_public-postgres_farcaster_fids.sql  002_public-postgres_farcaster_fids.sql  003_00_public-postgres_farcaster_fnames.sql  003_01_public-postgres_farcaster_fnames.sql  003_public-postgres_farcaster_fnames.sql  004_public-postgres_farcaster_links.sql  005_00_public-postgres_farcaster_reactions.sql  005_01_public-postgres_farcaster_reactions.sql  005_02_public-postgres_farcaster_reactions.sql  005_03_public-postgres_farcaster_reactions.sql  005_04_public-postgres_farcaster_reactions.sql  005_05_public-postgres_farcaster_reactions.sql  005_public-postgres_farcaster_reactions.sql  006_00_public-postgres_farcaster_signers.sql  006_01_public-postgres_farcaster_signers.sql  006_02_public-postgres_farcaster_signers.sql  006_03_public-postgres_farcaster_signers.sql  006_public-postgres_farcaster_signers.sql  007_00_public-postgres_farcaster_storage.sql  007_01_public-postgres_farcaster_storage.sql  007_02_public-postgres_farcaster_storage.sql  007_public-postgres_farcaster_storage.sql  008_00_public-postgres_farcaster_user_data.sql  008_01_public-postgres_farcaster_user_data.sql  008_02_public-postgres_farcaster_user_data.sql  008_03_public-postgres_farcaster_user_data.sql  008_public-postgres_farcaster_user_data.sql  009_public-postgres_farcaster_verifications.sql  010_00_public-postgres_farcaster_warpcast_power_users.sql  010_public-postgres_farcaster_warpcast_power_users.sql  011_00_public-postgres_farcaster_profile_with_addresses.sql  011_public-postgres_farcaster_profile_with_addresses.sql  (+63 more)
src/neynar_parquet_importer/: app.py  context.py  db.py  logger.py  logging.py  main.py  neynar_api.py  progress.py  row_filters.py  s3.py  settings.py
src/neynar_parquet_importer/cli/: backfill.py  direct_import.py
src/neynar_parquet_importer/database/: base.py  factory.py  neo4j.py  neo4j_queries.py  neo4j_schema.py  postgres.py  unified_performance.py
src/neynar_parquet_importer/transformers/: base.py  follows.py  streaming.py  users.py  verifications.py
tests/: README.md  test_db.py  test_filters.py  test_neynar_api_client.py  test_parquet_direct.py
tests/data/: nindexer-follows-1750957186-1750957187.parquet  nindexer-follows-1750957187-1750957188.parquet  nindexer-follows-1750957189-1750957190.parquet  nindexer-follows-1750957190-1750957191.parquet  nindexer-verifications-1749145661-1749145662.parquet
