[project]
name = "neynar-parquet-importer"
version = "0.3.0"
description = "Import Neynar's parquet files into a Postgres database"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==2.4.1",
    "boto3==1.35.11",
    "botocore==1.35.69",
    "decorator==5.1.1",
    "executing==2.1.0",
    "ipdb==0.13.13",
    "ipython==8.27.0",
    "jedi==0.19.1",
    "jmespath==1.0.1",
    "markdown-it-py==3.0.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "numpy==2.1.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "prompt-toolkit==3.0.47",
    "psycopg2==2.9.9",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pyarrow==17.0.0",
    "pydantic-settings>=2.6.1",
    "pygments==2.18.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.0.1",
    "rich==13.8.0",
    "s3transfer==0.10.2",
    "six==1.16.0",
    "sqlalchemy==2.0.33",
    "stack-data==0.6.3",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "urllib3==2.2.2",
    "wcwidth==0.2.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
]
