[project]
name = "neynar-parquet-importer"
version = "0.3.5"
description = "Import Neynar's parquet files into a Postgres database"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens",
    "boto3",
    "botocore",
    "cachetools>=5.5.2",
    "datadog",
    "decorator",
    "executing",
    "ipdb",
    "ipython",
    "jedi",
    "jmespath",
    "markdown-it-py",
    "matplotlib-inline",
    "mdurl",
    "numpy",
    "orjson>=3.10.15",
    "parso",
    "pexpect",
    "prompt-toolkit",
    "psycopg>=3.2.3",
    "ptyprocess",
    "pure-eval",
    "pyarrow",
    "pydantic-settings>=2.6.1",
    "pygments",
    "python-dateutil",
    "python-dotenv>=1.0.1",
    "python-json-logger>=2.0.7",
    "requests>=2.32.3",
    "rich",
    "s3transfer",
    "six",
    "sqlalchemy",
    "stack-data",
    "tenacity",
    "traitlets",
    "typing-extensions",
    "urllib3",
    "wcwidth",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.6.2",
    "tomli>=2.0.1",
    "build>=1.1.1",
]
